--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     ]
   },
   "devDependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "sass": "^1.53.0"
   },
   "overrides": {
